--- a/Learn Node/node project/views/about.ejs
+++ b/Learn Node/node project/views/about.ejs
@@ -1,21 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja | <%= title %></title>
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Ninja</h1></a>
-            <p>A Net Ninja Site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+
+    <%- include('./partials/nav.ejs') %>
 
     <div class="about content">
         <h2>About Us</h2>
@@ -23,5 +11,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti culpa, minus praesentium sapiente explicabo commodi iste repellendus quo, eligendi libero ex perspiciatis aperiam nobis laborum vero ipsam nulla quia recusandae!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti culpa, minus praesentium sapiente explicabo commodi iste repellendus quo, eligendi libero ex perspiciatis aperiam nobis laborum vero ipsam nulla quia recusandae!</p>
     </div>
+
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
